src/modules/GmshAPI/src/GmshInterface/gmshc.h

#define GMSH_API __declspec(dllexport)
#define GMSH_API __declspec(dllimport)
#define GMSH_API
/* Set a mesh size callback for the current model. The callback function
 * should take six arguments as input (`dim', `tag', `x', `y', `z' and `lc').
 * The first two integer arguments correspond to the dimension `dim' and tag
 * `tag' of the entity being meshed. The next four double precision arguments
 * correspond to the coordinates `x', `y' and `z' around which to prescribe
 * the mesh size and to the mesh size `lc' that would be prescribed if the
 * callback had not been called. The callback function should return a double
 * precision number specifying the desired mesh size; returning `lc' is
 * equivalent to a no-op. */
GMSH_API void gmshModelMeshSetSizeCallback(double (*callback)(int dim, int tag, double x, double y, double z, double lc, void *data), void *callback_data,
                                           int *ierr);
/* Create the FLTK graphical user interface. Can only be called in the main
 * thread. */
GMSH_API void gmshFltkInitialize(int *ierr);
/* Wait at most `time' seconds for user interface events and return. If `time'
 * < 0, wait indefinitely. First automatically create the user interface if it
 * has not yet been initialized. Can only be called in the main thread. */
GMSH_API void gmshFltkWait(const double time,
                           int *ierr);
/* Update the user interface (potentially creating new widgets and windows).
 * First automatically create the user interface if it has not yet been
 * initialized. Can only be called in the main thread: use `awake("update")'
 * to trigger an update of the user interface from another thread. */
GMSH_API void gmshFltkUpdate(int *ierr);
/* Awake the main user interface thread and process pending events, and
 * optionally perform an action (currently the only `action' allowed is
 * "update"). */
GMSH_API void gmshFltkAwake(const char *action,
                            int *ierr);
/* Block the current thread until it can safely modify the user interface. */
GMSH_API void gmshFltkLock(int *ierr);
/* Release the lock that was set using lock. */
GMSH_API void gmshFltkUnlock(int *ierr);
/* Run the event loop of the graphical user interface, i.e. repeatedly call
 * `wait()'. First automatically create the user interface if it has not yet
 * been initialized. Can only be called in the main thread. */
GMSH_API void gmshFltkRun(int *ierr);
/* Check if the user interface is available (e.g. to detect if it has been
 * closed). */
GMSH_API int gmshFltkIsAvailable(int *ierr);
/* Select entities in the user interface. If `dim' is >= 0, return only the
 * entities of the specified dimension (e.g. points if `dim' == 0). */
GMSH_API int gmshFltkSelectEntities(int **dimTags, size_t *dimTags_n,
                                    const int dim,
                                    int *ierr);
/* Select elements in the user interface. */
GMSH_API int gmshFltkSelectElements(size_t **elementTags, size_t *elementTags_n,
                                    int *ierr);
/* Select views in the user interface. */
GMSH_API int gmshFltkSelectViews(int **viewTags, size_t *viewTags_n,
                                 int *ierr);
/* Split the current window horizontally (if `how' = "h") or vertically (if
 * `how' = "v"), using ratio `ratio'. If `how' = "u", restore a single window. */
GMSH_API void gmshFltkSplitCurrentWindow(const char *how,
                                         const double ratio,
                                         int *ierr);
/* Set the current window by speficying its index (starting at 0) in the list
 * of all windows. When new windows are created by splits, new windows are
 * appended at the end of the list. */
GMSH_API void gmshFltkSetCurrentWindow(const int windowIndex,
                                       int *ierr);
/* Set a status message in the current window. If `graphics' is set, display
 * the message inside the graphic window instead of the status bar. */
GMSH_API void gmshFltkSetStatusMessage(const char *message,
                                       const int graphics,
                                       int *ierr);
/* Show context window for the entity of dimension `dim' and tag `tag'. */
GMSH_API void gmshFltkShowContextWindow(const int dim,
                                        const int tag,
                                        int *ierr);
/* Open the `name' item in the menu tree. */
GMSH_API void gmshFltkOpenTreeItem(const char *name,
                                   int *ierr);
/* Close the `name' item in the menu tree. */
GMSH_API void gmshFltkCloseTreeItem(const char *name,
                                    int *ierr);